apps/monitoring/grafana/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "grafana.pawked.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
          kind: Service
          group: ''
          weight: 1
